<?xml version="1.0"?>
<package format="2">
  <name>hector_qml_controls</name>
  <version>1.0.0</version>
  <description>The hector_qml_controls package</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>MIT</license>

  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>qml-module-qtgraphicaleffects</exec_depend>
  <exec_depend>qml-module-qtquick2</exec_depend>
  <exec_depend>qml-module-qtquick-controls2</exec_depend>
  <exec_depend>qml-module-qtquick-layouts</exec_depend>
  <exec_depend>qml_ros_plugin</exec_depend>

</package>
